FIX: improve contrast of hovered canned reply title

--- a/assets/stylesheets/canned-replies.scss
+++ b/assets/stylesheets/canned-replies.scss
@@ -21,7 +21,7 @@
 }
 
 .canned-reply-title:hover {
-  background-color: #eee;
+  background-color: $highlight-medium;
   cursor: pointer;
 }
 
